role main removed from main tag

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <main role="main">
+    <main>
       <section class="rating">
         <div class="rating-state">
           <!-- Rating state start -->
